--- a/files_css/generalStyle.css
+++ b/files_css/generalStyle.css
@@ -13,6 +13,11 @@ html {
 
 body {
   z-index: -10;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
